--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,11 @@
       <ul class="picture-list list">
         <li class="picture-item">
           <a class="picture-link" href="">
+            <div class="overlay-container">
+            <div class="overlay">
             <img class="img" src="./images/Bankingapp.jpg" alt="Banking App">
+            </div>
+            </div>
             <div class="pic-container">
             <h2 class="name">Banking App Interface Concept</h2>
             <p>App</p> 
