--- a/portfolio.html
+++ b/portfolio.html
@@ -45,10 +45,9 @@
       <ul class="picture-list list">
         <li class="picture-item">
           <a class="picture-link" href="">
-            <div class="overlay-container">
-            <div class="overlay">
+            <div class="img-container">
             <img class="img" src="./images/Bankingapp.jpg" alt="Banking App">
-            </div>
+            <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
             </div>
             <div class="pic-container">
             <h2 class="name">Banking App Interface Concept</h2>
@@ -58,7 +57,10 @@
         </li>
         <li class="picture-item">
           <a class="picture-link" href="">
+            <div class="img-container">
             <img class="img" src="./images/Cashlesspayment.jpg" alt="Payment">
+            <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+            </div>
           <div class="pic-container">
             <h2 class="name">Cashless Payment</h2>
           <p>Marketing</p>
@@ -67,7 +69,10 @@
         </li>
         <li class="picture-item">
           <a class="picture-link" href="">
+            <div class="img-container">
             <img class="img" src="./images/Meditationapp.jpg" alt="Meditation app">
+            <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+            </div>
           <div class="pic-container">
             <h2 class="name">Meditaion App</h2>
           <p>App</p>
@@ -76,7 +81,10 @@
         </li>
         <li class="picture-item">
           <a class="picture-link" href="">
+            <div class="img-container">
             <img class="img" src="./images/Taxi.jpg" alt="Taxi service">
+            <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+            </div>
           <div class="pic-container">
             <h2 class="name">Taxi Service</h2>
           <p>Marketing</p>
@@ -85,7 +93,10 @@
         </li>
         <li class="picture-item">
           <a class="picture-link" href="">
+            <div class="img-container">
             <img class="img" src="./images/Screen.jpg" alt="Screen illustrations">
+            <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+            </div>
           <div class="pic-container">
             <h2 class="name">Screen Illustrations</h2>
           <p>Design</p>
@@ -94,7 +105,10 @@
         </li>
         <li class="picture-item">
           <a class="picture-link" href="">
+            <div class="img-container">
             <img class="img" src="./images/Courses.jpg" alt="Online courses">
+            <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+            </div>
           <div class="pic-container">
             <h2 class="name">Online Courses</h2>
           <p>Marketing</p>
@@ -103,7 +117,10 @@
         </li>
         <li class="picture-item">
           <a class="picture-link" href="">
+            <div class="img-container">
             <img class="img" src="./images/Instagram.jpg" alt="Instagram stories">
+            <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+            </div>
           <div class="pic-container">
             <h2 class="name">Instagram Stories Concept</h2>
           <p>Design</p>
@@ -112,7 +129,10 @@
         </li>
         <li class="picture-item">
           <a class="picture-link" href="">
+            <div class="img-container">
             <img class="img" src="./images/Organic.jpg" alt="Organic food">
+            <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+            </div>
           <div class="pic-container">
             <h2 class="name">Organic Food</h2>
           <p>Web Site</p>
@@ -121,7 +141,10 @@
         </li>
         <li class="picture-item">
           <a class="picture-link" href="">
+            <div class="img-container">
             <img class="img" src="./images/Coffee.jpg" alt="Fresh coffee">
+            <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+            </div>
           <div class="pic-container">
             <h2 class="name">Fresh Coffee</h2>
           <p>Web Site</p>
