--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <section class="hero-section section">
         <div class="hero-container container"> 
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="hero-button" type="button">Order Service</button>
+        <button class="hero-button" data-modal-open type="button">Order Service</button>
         </div>
       </section>
       <!-- Features -->
@@ -358,5 +358,15 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button class="modal-close-btn" data-modal-close type="button">
+          <svg class="icon-close" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+  <script src="./js/modal.js"></script>
   </body>
 </html>
