--- a/portfolio.html
+++ b/portfolio.html
@@ -17,10 +17,10 @@
        <!-- Logo -->
        <div class="nav-container container">
         <nav class="nav">
-         <a class="logo link" href="index.html">WEB<span class="logo-dark">STUDIO</span></a>
+         <a class="logo nav-link link" href="index.html">WEB<span class="logo-dark">STUDIO</span></a>
          <ul class="nav-list list">
           <li><a class="nav-link link" href="index.html">Studio</a></li>
-          <li><a class="current-link link" href="portfolio.html">Portfolio</a></li>
+          <li><a class="current-link nav-link link" href="portfolio.html">Portfolio</a></li>
           <li><a class="nav-link link" href="">Contacts</a></li>
          </ul>
       </nav>
